# lume-genesis

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  MANIFEST.in  README.md  env-genesis-only.yml  environment.yml  genesis_tools.py  index.html  index.md  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml  test-requirements.txt
.github/actions/conda-setup/: action.yml
.github/workflows/: ci.yml  gh-pages.yml  lint.yml  pypi.yml  tests-conda.yml  tests-pip.yml  tests.yml
api/genesis2/: index.html
api/genesis4/: index.html
docs/: index.md  installation.md
docs/api/: genesis2.md  genesis4-lattice.md  genesis4-main-input.md  genesis4-output.md  genesis4.md
docs/examples/genesis2/: beam_file_example.ipynb  example_interactive_plotting.ipynb  example_parse_genesis_lattice.ipynb  example_parsing_genesis_field.ipynb  example_parsing_genesis_out.ipynb  genesis2_example.ipynb
docs/examples/genesis2/data/: beam_file.txt  lcls.lat  mod_3.out
docs/examples/genesis4/: Example1.ipynb  Example2.ipynb  Example3-TimeDependent.ipynb  bmad_genesis4.ipynb  fodo_scan.ipynb  fodo_scan_model.ipynb  genesis4-python-particles.ipynb  genesis4_example-new.ipynb  genesis4_example.ipynb  genesis4_field.ipynb  genesis4_parsing.ipynb  genesis4_particles.ipynb  intro-1-Quickstart.ipynb  intro-2-MainInput.ipynb  intro-3-Lattice.ipynb  intro-4-Running.ipynb  intro-5-Migrating.ipynb  perlmutter_benchmark.ipynb  resistive_wall_wakefield.ipynb
docs/examples/genesis4/data/: genesis4_drift.lat
docs/notes/: genesis_fields.tex  typing.md
docs/stylesheets/: extra.css
examples/: Genesis4.ipynb  beam_file_example.ipynb  example_interactive_plotting.ipynb  example_parse_genesis_lattice.ipynb  example_parsing_genesis_field.ipynb  example_parsing_genesis_out.ipynb  genesis2_example.ipynb  genesis4_class.ipynb  genesis_wavefront_ac527a9a7ba0aa9d23cc0977b9eb4d59.h5  old_simple_genesis_run.ipynb  simple_genesis_run.ipynb
examples/data/: beam_file.txt  lcls.lat
examples/data/basic_mpi/: genesis.in
examples/genesis2/beam_file_example/: beam_file_example.ipynb  index.html
examples/genesis2/example_interactive_plotting/: index.html
examples/genesis2/example_parse_genesis_lattice/: example_parse_genesis_lattice.ipynb  index.html
examples/genesis2/example_parsing_genesis_field/: index.html
examples/genesis2/example_parsing_genesis_out/: example_parsing_genesis_out.ipynb  index.html
examples/genesis2/genesis2_example/: index.html
examples/genesis4/fodo_scan/: fodo_scan.ipynb  index.html
examples/genesis4/fodo_scan_model/: fodo_scan_model.ipynb  index.html
examples/genesis4/genesis4_example/: genesis4_example.ipynb  index.html
examples/genesis4/genesis4_field/: index.html
examples/genesis4/genesis4_parsing/: index.html
examples/genesis4/genesis4_particles/: index.html
examples/genesis4/perlmutter_benchmark/: index.html  perlmutter_benchmark.ipynb
extra/fast_cat/: mpi.f
extra/fix_genesis_input/: input.f
genesis/: __init__.py  _version.py  analysis.py  archive.py  errors.py  fields.py  genesis.py  genesis2.py  genesis_tools.py  grammar.py  interactive.py  lattice.lark  lattice.py  old_genesis.py  parsers.py  particles.py  tools.py  writers.py
genesis/tests/: conftest.py  test_genesis2.py  test_parsers.py
genesis/tests/genesis4/: conftest.py  cu_hxr.in  genesis4.in  lattice.md  main_input.md  test_archive.py  test_dir.py  test_fields.py  test_initial_particles.py  test_input.py  test_lattice_parser.py  test_main_input_parser.py  test_manual_parser.py  test_notebooks.py  test_output.py  test_parsers.py  test_pydantic_types.py  test_repr.py  test_run.py  test_run_particles.py  test_taper.py  util.py
genesis/version4/: __init__.py  archive.py  dataclasses.tpl  field.py  genesis4.py  grammar.py  loadable.py  manual.py  output.py  parsers.py  particles.py  plot.py  readers.py  run.py  types.py  writers.py
genesis/version4/input/: __init__.py  _lattice.py  _main.py  base.py  core.py  dataclasses.tpl  generated_lattice.py  generated_main.py  grammar.py  lattice.lark  lattice.py  main_input.lark  manual.py  parsers.py  types.py  util.py
genesis/version4/interfaces/: bmad.py
genesis4/: readers.py  writers.py
installation/: index.html
scripts/: describe_output.py  execute_notebooks.bash  genesis4-output-summary.yaml  regenerate_dataclasses.sh
search/: search_index.json
tests/: test_genesis2.py  test_genesis4.py
(+23 files in other folders)
