[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=60", "setuptools_scm[toml]>=8.0"]

[project]
authors = [{ name = "Christopher Mayes" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "h5py",
  "jinja2",
  "lark",
  "lume-base",
  "matplotlib",
  "numpy",
  "openpmd-beamphysics >=0.11.0",
  "prettytable",
  "psutil",
  "pydantic >2",
  "pydantic-settings",
  "typing-extensions",
  # Picking up pmd-beamphysics deps for now:
  "scipy>=1.0.0",
  "python-dateutil",
]
description = "LUME tools for using Genesis 1.3 version 2 and version 4"
dynamic = ["version"]
keywords = []
name = "lume-genesis"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "jinja2"]
doc = [
  "mkdocs",
  "mkdocs-jupyter",
  "mkdocs-macros-plugin",
  "mkdocs-material",
  "mkdocstrings",
  "mkdocstrings-python",
]

[project.urls]
Homepage = "https://github.com/slaclab/lume-genesis"

[tool.setuptools.packages.find]
where = ["."]
include = ["genesis*"]
namespaces = false

[project.license]
file = "LICENSE"

[tool.ruff]
# select = []
# ignore = []

[tool.pytest.ini_options]
addopts = "--cov=genesis/"
log_cli_level = "INFO"
log_level = "DEBUG"
testpaths = ["genesis/tests"]

[tool.setuptools_scm]
version_file = "genesis/_version.py"
# For publishing to testpypi (no local dev+hash suffix)
local_scheme = "no-local-version"
